@@ -1,3 +1,9 @@
+2008-07-30  Jeffrey Stedfast  <fejj@novell.com>
+
+	* esdlib.c (write_timeout): Check for the existence of POLLERR or
+	POLLHUP first. If either is set, abort the write(). We can't
+	assume that POLLOUT won't be set if a hang-up occurred.
+
 2008-07-29  Jeffrey Stedfast  <fejj@novell.com>
 
 	* audio_oss.c: #include <errno.h>. Fixes bug #543239
